--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,7 +11,8 @@
           <%= link_to "Edit profile", "#", class: 'btn btn-default btn-lg btn-block' %>
           <%= link_to "View profile", user_path(current_user), class: 'btn btn-default btn-lg btn-block' %>
         <% else %>
-          <%= link_to "Create your profile", new_user_profile_path(current_user) %>
+          <p>Create your profile so that you can share your information with the community.</p>
+          <%= link_to "Create your profile", new_user_profile_path(current_user), class: 'btn btn-default btn-lg btn-block' %>
         <% end %>
       </div>
     </div>
@@ -19,13 +20,13 @@
     <div class="col-md-6">
       <div class="well">
        <h2 class="text-center">The Community</h2>
-       <p>Visit the community to meet other developers, entreprenuers and investors!</p>
+       <p>Visit the community to meet other developers, entrepreneurs and investors!</p>
        <%= link_to "Visit the community", "#", class: 'btn btn-default btn-lg btn-block' %>
       </div>
     </div>
 
   <% else %>
-  
+
     <div class="col-md-6">
       <div class="well">
         <h2 class="text-center">Basic Membership</h2>
