Improved user index page

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -25,3 +25,16 @@
   background-color: #5bc0de;
   border-color: #46b8da;
 }
+
+.well.white-bg {
+  background-color: white;
+}
+
+.user-show-avatar {
+  height: 128px;
+  width: 128px;
+}
+
+.user-index-avatar {
+  border-radius: 50%;
+}
